WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179442
REGRESSION(
r224534
): Crash inside Document::updateStyleIfNeeded
https://bugs.webkit.org/show_bug.cgi?id=179442
Summary
REGRESSION(r224534): Crash inside Document::updateStyleIfNeeded
Ryosuke Niwa
Reported
2017-11-08 13:19:13 PST
REGRESSION(
r224534
): Crash inside Document::updateStyleIfNeeded
Attachments
Disable assertins in iOS
(1.77 KB, patch)
2017-11-08 13:20 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2017-11-08 13:20:45 PST
Created
attachment 326355
[details]
Disable assertins in iOS
Simon Fraser (smfr)
Comment 2
2017-11-08 13:26:44 PST
rdar://problem/35421652
WebKit Commit Bot
Comment 3
2017-11-08 15:54:19 PST
Comment on
attachment 326355
[details]
Disable assertins in iOS Clearing flags on attachment: 326355 Committed
r224604
: <
https://trac.webkit.org/changeset/224604
>
WebKit Commit Bot
Comment 4
2017-11-08 15:54:21 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5
2017-11-08 18:59:24 PST
Comment on
attachment 326355
[details]
Disable assertins in iOS View in context:
https://bugs.webkit.org/attachment.cgi?id=326355&action=review
> Source/WebCore/dom/Document.cpp:1942 > +#if !USE(WEB_THREAD)
How does this work? We don't have separate WebCore builds for WebKit2 and legacy WebKit, so won't this completely disable the assertion on iOS?
Simon Fraser (smfr)
Comment 6
2017-11-08 19:42:45 PST
Yes, it does. We plan to re-enable the assertion after some bug fixing.
Ryosuke Niwa
Comment 7
2017-11-08 23:10:56 PST
(In reply to Alexey Proskuryakov from
comment #5
)
> Comment on
attachment 326355
[details]
> Disable assertins in iOS > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=326355&action=review
> > > Source/WebCore/dom/Document.cpp:1942 > > +#if !USE(WEB_THREAD) > > How does this work? We don't have separate WebCore builds for WebKit2 and > legacy WebKit, so won't this completely disable the assertion on iOS?
Yes. That's the intent to unblock the submission. I intend on fixing the assertion next week when I actually have an engineering time.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug