REGRESSION(r224534): Crash inside Document::updateStyleIfNeeded https://bugs.webkit.org/show_bug.cgi?id=179442

Reviewed by Simon Fraser.

Disable the assertion when the web thread is used.

* dom/Document.cpp:
(WebCore::Document::updateStyleIfNeeded):
(WebCore::Document::updateLayout):


Canonical link: https://commits.webkit.org/195503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224604 268f45cc-cd09-0410-ab3c-d52691b4dbfc